# scrapingPagesJaunes

./: LICENSE  README.md  main.py  pyproject.toml
bookscraper/: bookdata.csv  bookdata.json  booksdata.json
bookscraper/bookscraper/: items.py  middlewares.py  pipelines.py  settings.py
bookscraper/bookscraper/spiders/: bookspider.py
