[tool.poetry]
name = "pages-jaunes-scraper"
version = "0.1.0"
description = "Scraper of Leads on Pages Jaunes"
authors = ["Vincent Reau"]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12.3"
python-dotenv = "1.0.0"
scrapy = "^2.12.0"
ipython = "^9.0.2"
mysql = "^0.0.3"
mysql-connector-python = "^9.2.0"
scrapy-rotating-proxies = "^0.6.2"
scrapeops-scrapy-proxy-sdk = "^1.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
